Config AutoConfigExclude in property

--- a/valentine-search/src/main/resources/config/application.yml
+++ b/valentine-search/src/main/resources/config/application.yml
@@ -32,6 +32,9 @@ spring:
     open-in-view: true
     hibernate:
       ddl-auto: none
+  autoconfigure:
+    # to use VT, should exclude this
+    exclude: org.springframework.boot.autoconfigure.task.TaskExecutionAutoConfiguration
 
 #  # 全局懒加载。
 #  main:
