--- a/unicorn-starter/src/main/resources/config/application.yml
+++ b/unicorn-starter/src/main/resources/config/application.yml
@@ -50,6 +50,9 @@ spring:
     open-in-view: true
     hibernate:
       ddl-auto: none
+  autoconfigure:
+    # to use VT, should exclude this
+    exclude: org.springframework.boot.autoconfigure.task.TaskExecutionAutoConfiguration
 
   # 参考：https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.6-Release-Notes#pathpattern-based-path-matching-strategy-for-spring-mvc
   # The default strategy for matching request paths against registered Spring MVC handler mappings has changed from AntPathMatcher to PathPatternParser
