--- a/valentine-starter/src/main/resources/config/application.yml
+++ b/valentine-starter/src/main/resources/config/application.yml
@@ -32,6 +32,9 @@ spring:
     open-in-view: true
     hibernate:
       ddl-auto: none
+  autoconfigure:
+    # to use VT, should exclude this
+    exclude: org.springframework.boot.autoconfigure.task.TaskExecutionAutoConfiguration
 
 #密码加密传输，前端公钥加密，后端私钥解密
 rsa:
@@ -47,7 +50,7 @@ local:
     name: X0X
     # 相同服务的各实例会有不同的配置，从而使得一些事件能被各实例都消费一次，理论上有更好地解决方案
     sp-sync-queue: xs.sp-sync.queue
-#    sim-auth: true
+    sim-auth: true
   rs:
     str: string
     # 当使用properties来配置时，不要带最外层的引号""，{k1: 'v1', k2: 'v2'}，注意value要用引号括起来，key没要求，单双引号都可以
