--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <groupId>com.lwohvye</groupId>
     <artifactId>unicorn</artifactId>
     <packaging>pom</packaging>
-    <version>3.2.0-SNAPSHOT</version>
+    <version>3.2.0</version>
 
     <name>Server Base</name>
     <url>https://github.com/lWoHvYe/eladmin</url>
@@ -77,7 +77,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <!--开发版本-->
         <java.version>19</java.version>
-        <project.core.version>3.2.0-SNAPSHOT</project.core.version>
+        <project.core.version>3.2.0</project.core.version>
         <!--支持Java 18，问题不在这，这里不升级也没啥问题，用release就可以了-->
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
         <!--Starting JDK 9, release can be used to do the things what source and target can do
@@ -101,7 +101,7 @@
         <poi.version>5.2.2</poi.version>
         <xerces.version>2.12.2</xerces.version>
         <yauaa.version>7.8.0</yauaa.version>
-        <ip2region.version>2.7.5</ip2region.version>
+        <ip2region.version>2.7.6</ip2region.version>
         <thumbnailator.version>0.4.18</thumbnailator.version>
         <argLine>
             -Dfile.encoding=UTF-8
