--- a/unicorn-starter/pom.xml
+++ b/unicorn-starter/pom.xml
@@ -31,13 +31,13 @@
 
     <properties>
         <java.version>19</java.version>
-        <project.core.version>3.2.0-SNAPSHOT</project.core.version>
+        <project.core.version>3.2.0</project.core.version>
         <maven.compiler.release>17</maven.compiler.release>
         <lombok.version>1.18.24</lombok.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <javassist.version>3.29.2-GA</javassist.version>
         <shardingsphere.version>5.2.0</shardingsphere.version>
-        <kotlin.version>1.7.20</kotlin.version>
+        <kotlin.version>1.7.22</kotlin.version>
     </properties>
 
     <dependencies>
