--- a/valentine-search/pom.xml
+++ b/valentine-search/pom.xml
@@ -31,14 +31,14 @@
 
     <properties>
         <java.version>19</java.version>
-        <project.core.version>3.2.0-SNAPSHOT</project.core.version>
+        <project.core.version>3.2.0</project.core.version>
         <maven.compiler.release>17</maven.compiler.release>
         <lombok.version>1.18.24</lombok.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <querydsl.version>5.0.0</querydsl.version>
         <blaze-persistence.version>1.6.6</blaze-persistence.version>
         <auto-service.version>1.0.1</auto-service.version>
-        <kotlin.version>1.7.20</kotlin.version>
+        <kotlin.version>1.7.22</kotlin.version>
     </properties>
 
     <dependencies>
