--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <groupId>com.lwohvye</groupId>
     <artifactId>unicorn</artifactId>
     <packaging>pom</packaging>
-    <version>3.2.0</version>
+    <version>3.3.0-SNAPSHOT</version>
 
     <name>Server Base</name>
     <url>https://github.com/lWoHvYe/eladmin</url>
@@ -49,7 +49,7 @@
         <connection>scm:git:git://github.com/lWoHvYe/eladmin.git</connection>
         <developerConnection>scm:git:ssh://github.com/lWoHvYe/eladmin.git</developerConnection>
         <url>https://github.com/lWoHvYe/eladmin/tree/main</url>
-        <tag>unicorn-v3.2.0</tag>
+        <tag>unicorn-v3.3.0</tag>
     </scm>
 
     <modules>
@@ -77,7 +77,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <!--开发版本-->
         <java.version>19</java.version>
-        <project.core.version>3.2.0</project.core.version>
+        <project.core.version>3.3.0-SNAPSHOT</project.core.version>
         <!--支持Java 18，问题不在这，这里不升级也没啥问题，用release就可以了-->
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
         <!--Starting JDK 9, release can be used to do the things what source and target can do
