--- a/unicorn-native/pom.xml
+++ b/unicorn-native/pom.xml
@@ -16,7 +16,7 @@
     <properties>
         <java.version>17</java.version>
         <maven.compiler.release>17</maven.compiler.release>
-        <unicorn.core.version>3.2.0</unicorn.core.version>
+        <unicorn.core.version>3.3.0-SNAPSHOT</unicorn.core.version>
         <repackage.classifier/>
         <spring-native.version>0.12.1</spring-native.version>
         <springdoc.openapi.version>1.6.12</springdoc.openapi.version>
