--- a/unicorn-sys-api/pom.xml
+++ b/unicorn-sys-api/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <artifactId>unicorn</artifactId>
         <groupId>com.lwohvye</groupId>
-        <version>3.2.0</version>
+        <version>3.3.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
