--- a/valentine-search/pom.xml
+++ b/valentine-search/pom.xml
@@ -31,7 +31,7 @@
 
     <properties>
         <java.version>19</java.version>
-        <project.core.version>3.2.0</project.core.version>
+        <project.core.version>3.3.0-SNAPSHOT</project.core.version>
         <maven.compiler.release>17</maven.compiler.release>
         <lombok.version>1.18.24</lombok.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
