--- a/valentine-starter/pom.xml
+++ b/valentine-starter/pom.xml
@@ -31,7 +31,7 @@
 
     <properties>
         <java.version>19</java.version>
-        <unicorn.core.version>3.2.0</unicorn.core.version>
+        <unicorn.core.version>3.3.0-SNAPSHOT</unicorn.core.version>
         <maven.compiler.release>18</maven.compiler.release>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <kotlin.version>1.7.22</kotlin.version>
