--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
                 <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                 <version>${springdoc.openapi.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+                <version>${springdoc.openapi.version}</version>
+            </dependency>
             <!--    swagger-core依赖该包，部分原因，需单独升级依赖版本    -->
             <dependency>
                 <groupId>com.google.guava</groupId>
