--- a/valentine-starter/pom.xml
+++ b/valentine-starter/pom.xml
@@ -63,6 +63,11 @@
             <version>${unicorn.core.version}</version>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.lwohvye</groupId>
+            <artifactId>unicorn-tp-tools</artifactId>
+            <version>${unicorn.core.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
