update img build config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,7 @@
 version: '3'
 services:
   web:
-    build: .
-    restart: always
+    image: valentine-starter:3.0.0
     container_name: valentine-day-8082
     ports:
-      - "8082:8082"
-    volumes:
-      - /root/el_app/8082/log:/unicorn_app/log
+      - "8082:8081"
