--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,18 +18,18 @@ jobs:
       fail-fast: false
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-    - name: Setup Java JDK
-      uses: actions/setup-java@v3.6.0
-      with:
-        java-version: '19'
-        distribution: 'corretto'
-        check-latest: true
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Setup Java JDK
+        uses: actions/setup-java@v3.7.0
+        with:
+          java-version: '19'
+          distribution: 'corretto'
+          check-latest: true
 
-    - name: Build Core
-      run: mvn -B install --file pom.xml
-    - name: Build Valentine's Day
-      run: mvn -B package --file valentine-starter/pom.xml
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag unicorn_web:$(date +%s)
+      - name: Build Core
+        run: mvn -B install --file pom.xml
+      # - name: Build Valentine's Day
+      #   run: mvn -B package --file valentine-starter/pom.xml
+      - name: Build the Docker image
+        run: mvn -B spring-boot:build-image --file valentine-starter/pom.xml
