--- a/unicorn-core/pom.xml
+++ b/unicorn-core/pom.xml
@@ -142,6 +142,15 @@
             <!--<optional>true</optional>-->
         </dependency>
 
+        <!--Mysql依赖包-->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <!--scope元素主要用来控制依赖的使用范围，指定当前包的依赖范围和依赖的传递性，也就是哪些依赖在哪些classpath中可用。
+            常见的可选值有：compile, provided, runtime, test, system等。-->
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- excel工具 -->
         <dependency>
             <groupId>org.apache.poi</groupId>
