--- a/unicorn-core/src/main/resources/log4jdbc.log4j2.properties
+++ b/unicorn-core/src/main/resources/log4jdbc.log4j2.properties
@@ -15,6 +15,7 @@
 #
 
 # If you use SLF4J. First, you need to tell log4jdbc-log4j2 that you want to use the SLF4J logger
+# this file also close some connect-log named log4jdbc.log4j2
 log4jdbc.spylogdelegator.name=net.sf.log4jdbc.log.slf4j.Slf4jSpyLogDelegator
 log4jdbc.auto.load.popular.drivers=false
 log4jdbc.drivers=com.mysql.cj.jdbc.Driver
