--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,5 +31,5 @@ jobs:
         run: mvn -B install --file pom.xml
       # - name: Build Valentine's Day
       #   run: mvn -B package --file valentine-starter/pom.xml
-      - name: Build the Docker image
-        run: mvn -B spring-boot:build-image --file valentine-starter/pom.xml
+      - name: Build GraalVM Native image
+        run: $ mvn -Pnative spring-boot:build-image --file valentine-starter/pom.xml
