--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,4 +32,8 @@ jobs:
       # - name: Build Valentine's Day
       #   run: mvn -B package --file valentine-starter/pom.xml
       - name: Build GraalVM Native image
-        run: $ mvn -B spring-boot:build-image -Pnative --file valentine-starter/pom.xml 
+        run: $ mvn -B spring-boot:build-image --file valentine-starter/pom.xml --P native
+
+      # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+      - name: Update dependency graph
+        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
