--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,7 +32,7 @@ jobs:
       # - name: Build Valentine's Day
       #   run: mvn -B package --file valentine-starter/pom.xml
       - name: Build GraalVM Native image
-        run: $ mvn -B spring-boot:build-image --file valentine-starter/pom.xml --profile native
+        run: $ mvn -B spring-boot:build-image --file valentine-starter/pom.xml --profiles native
 
       # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
       - name: Update dependency graph
