--- a/unicorn-core/pom.xml
+++ b/unicorn-core/pom.xml
@@ -110,6 +110,7 @@
         <dependency>
             <groupId>com.lwohvye.log4jdbc-log4j2</groupId>
             <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
