--- a/unicorn-starter/src/main/resources/config/application-prod.yml
+++ b/unicorn-starter/src/main/resources/config/application-prod.yml
@@ -23,8 +23,8 @@ spring:
       # 主数据源
       write-ds:
         type: com.zaxxer.hikari.HikariDataSource
-        driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-        jdbc-url: jdbc:log4jdbc:mysql://${DB_HOST:10.211.55.140}:${DB_PORT:3306}/${DB_NAME:eladmin}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        jdbc-url: jdbc:mysql://${DB_HOST:10.211.55.140}:${DB_PORT:3306}/${DB_NAME:eladmin}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
         username: ${DB_USER:root}
         password: ${DB_PWD:root}
         pool-name: WriteDBP
@@ -32,8 +32,8 @@ spring:
       # 分数据源
       read-ds-0:
         type: com.zaxxer.hikari.HikariDataSource
-        driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-        jdbc-url: jdbc:log4jdbc:mysql://${DB_HOST:10.211.55.140}:${DB_PORT:3308}/${DB_NAME:eladmin}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        jdbc-url: jdbc:mysql://${DB_HOST:10.211.55.140}:${DB_PORT:3308}/${DB_NAME:eladmin}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
         # 从库改用只读账号
         username: ${DB_USER:reader}
         password: ${DB_PWD:123456}
@@ -41,8 +41,8 @@ spring:
       # 分数据源
       read-ds-1:
         type: com.zaxxer.hikari.HikariDataSource
-        driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-        jdbc-url: jdbc:log4jdbc:mysql://${DB_HOST:10.211.55.140}:${DB_PORT:3310}/${DB_NAME:eladmin}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        jdbc-url: jdbc:mysql://${DB_HOST:10.211.55.140}:${DB_PORT:3310}/${DB_NAME:eladmin}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
         # 从库改用只读账号
         username: ${DB_USER:reader}
         password: ${DB_PWD:123456}
@@ -92,13 +92,32 @@ spring:
     #    timeout: 2000 # 连接或读取超时时长（毫秒）
     #    database: 0
     redisson:
-      file: classpath:redisson.yaml
-  #    jedis:
-  #      pool:
-  #        max-active: 10  # 连接池最大连接数（使用负值表示没有限制）
-  #        max-wait: 800 # 连接池最大阻塞等待时间（使用负值表示没有限制）
-  #        max-idle: 5 # 连接池中的最大空闲连接
-  #        min-idle: 2 # 连接池中的最小空闲连接
+      config: |
+        masterSlaveServersConfig:
+          idleConnectionTimeout: 10000
+          connectTimeout: 10000
+          timeout: 3000
+          retryAttempts: 3
+          retryInterval: 1500
+          password: redis-psd
+          subscriptionsPerConnection: 5
+          clientName: null
+          loadBalancer: !<org.redisson.connection.balancer.RoundRobinLoadBalancer> { }
+          subscriptionConnectionMinimumIdleSize: 1
+          subscriptionConnectionPoolSize: 50
+          slaveConnectionMinimumIdleSize: 32
+          slaveConnectionPoolSize: 64
+          masterConnectionMinimumIdleSize: 32
+          masterConnectionPoolSize: 64
+          readMode: "SLAVE"
+          slaveAddresses:
+            - "redis://10.211.55.140:6378"
+            - "redis://10.211.55.140:6380"
+          masterAddress: "redis://10.211.55.140:6379"
+          database: 6
+          dnsMonitoringInterval: 5000
+        codec: !<org.redisson.codec.JsonJacksonCodec> { }
+        "transportMode": "NIO"
 
   ##### RabbitMQ ####
   rabbitmq:
