--- a/unicorn-system/pom.xml
+++ b/unicorn-system/pom.xml
@@ -107,6 +107,7 @@
         <dependency>
             <groupId>com.lwohvye.captcha</groupId>
             <artifactId>captcha-spring-boot-starter</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <!-- linux的管理 -->
