--- a/unicorn-core/pom.xml
+++ b/unicorn-core/pom.xml
@@ -107,21 +107,6 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
         </dependency>
-        <!--    swagger-core依赖该包，部分原因，需单独升级依赖版本    -->
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <exclusions>
-                <exclusion>
-                    <artifactId>checker-qual</artifactId>
-                    <groupId>org.checkerframework</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>error_prone_annotations</artifactId>
-                    <groupId>com.google.errorprone</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
 
         <!--工具包-->
         <dependency>
@@ -191,6 +176,7 @@
             <groupId>it.unimi.dsi</groupId>
             <artifactId>fastutil</artifactId>
             <version>${fastutil.version}</version>
+            <optional>true</optional>
         </dependency>
 
         <!-- 解析客户端操作系统、浏览器信息 -->
@@ -220,6 +206,7 @@
         <dependency>
             <groupId>net.coobird</groupId>
             <artifactId>thumbnailator</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
