--- a/valentine-starter/src/main/resources/config/application.yml
+++ b/valentine-starter/src/main/resources/config/application.yml
@@ -32,7 +32,7 @@ spring:
     open-in-view: true
     hibernate:
       ddl-auto: none
-    show-sql: true
+  #   show-sql: true
   autoconfigure:
     # to use VT, should exclude this
     exclude: org.springframework.boot.autoconfigure.task.TaskExecutionAutoConfiguration
