--- a/gradle.properties
+++ b/gradle.properties
@@ -14,8 +14,12 @@
 #    limitations under the License.
 #
 # define the version of dependency here
+bizlogVersion=3.0.3
 caffeineVersion=3.1.2
-commonsPool2Version=2.11.1
+captchaVersion=2.0.0
+commonsBeanutilsVersion=1.9.4
+commonsConfigurationVersion=2.8.0
+easyCaptchaVersion=1.6.2
 fastutilVersion=8.5.9
 hutoolVersion=5.8.10
 ip2regionVersion=2.7.6
@@ -25,6 +29,7 @@ logbackVersion=1.4.5
 logstashVersion=7.2
 mapstructVersion=1.5.3.Final
 mapstructSpringVersion=0.1.2
+oshiCoreVersion=6.3.2
 poiVersion=5.2.2
 quartzVersion=2.3.2
 redissonVersion=3.18.1
