--- a/settings.gradle
+++ b/settings.gradle
@@ -15,4 +15,4 @@ include(':unicorn-logging')
 include(':unicorn-tp-tools')
 include(':unicorn-sys-api')
 include(':unicorn-system')
-include(':minmax-p2p')
+include(':valentine-starter')
