--- a/unicorn-sys-api/build.gradle
+++ b/unicorn-sys-api/build.gradle
@@ -8,9 +8,9 @@ plugins {
 }
 
 dependencies {
-    api(project(':unicorn-core'))
-    annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
-    annotationProcessor("org.mapstruct:mapstruct-processor:${mapstructVersion}")
+    api project(':unicorn-core')
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 }
 
 description = '权限基础模块'
