--- a/unicorn-cd-generator/build.gradle
+++ b/unicorn-cd-generator/build.gradle
@@ -8,12 +8,12 @@ plugins {
 }
 
 dependencies {
-    api(project(':unicorn-core'))
-    api('org.springframework.boot:spring-boot-starter-freemarker')
-    implementation 'org.apache.commons:commons-configuration2:2.8.0'
-    implementation 'commons-beanutils:commons-beanutils:1.9.4'
-    annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
-    annotationProcessor("org.mapstruct:mapstruct-processor:${mapstructVersion}")
+    api project(':unicorn-core')
+    api 'org.springframework.boot:spring-boot-starter-freemarker'
+    implementation "org.apache.commons:commons-configuration2:${commonsConfigurationVersion}"
+    implementation "commons-beanutils:commons-beanutils:${commonsBeanutilsVersion}"
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 }
 
 description = '代码生成模块'
