--- a/unicorn-tp-tools/build.gradle
+++ b/unicorn-tp-tools/build.gradle
@@ -8,12 +8,12 @@ plugins {
 }
 
 dependencies {
-    api(project(':unicorn-core'))
+    api project(':unicorn-core')
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'software.amazon.awssdk:s3-transfer-manager:2.18.28-PREVIEW'
     implementation 'org.bouncycastle:bcpkix-jdk18on:1.72'
-    annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
-    annotationProcessor("org.mapstruct:mapstruct-processor:${mapstructVersion}")
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 }
 
 description = '3rd工具模块'
