--- a/unicorn-reactive/build.gradle
+++ b/unicorn-reactive/build.gradle
@@ -13,6 +13,7 @@ ext {
 
 dependencies {
     api(project(':unicorn-core')) {
+        // 括号里是Groovy的语法，定义map
         exclude(group: 'org.springframework', module: 'spring-webmvc')
     }
     api 'org.springframework.boot:spring-boot-starter-webflux'
