--- a/unicorn-tp-tools/build.gradle
+++ b/unicorn-tp-tools/build.gradle
@@ -9,7 +9,7 @@ plugins {
 
 dependencies {
     api project(':unicorn-core')
-    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    api 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'software.amazon.awssdk:s3-transfer-manager:2.18.28-PREVIEW'
     implementation 'org.bouncycastle:bcpkix-jdk18on:1.72'
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
@@ -27,4 +27,8 @@ extraJavaModuleInfo {
     automaticModule("mapstruct-spring-extensions-${mapstructSpringVersion}.jar", 'org.mapstruct.extensions.spring')
     automaticModule("redisson-${redissonVersion}.jar", 'org.redisson')
     automaticModule("thumbnailator-${thumbnailatorVersion}.jar", 'net.coobird.thumbnailator')
+    // todo 未达到预期效果，待调整，首先需要找到debug的方法
+    module('jakarta.mail-1.0.0.jar', 'jakarta.mail', '1.0.0') {
+        uses('jakarta.mail.util.StreamProvider')
+    }
 }
