--- a/unicorn-core/build.gradle
+++ b/unicorn-core/build.gradle
@@ -15,6 +15,16 @@ plugins {
 //    }
 //}
 
+description = '系统核心模块'
+
+java {
+    withJavadocJar()
+    // 这个要放到dependencies之前
+    registerFeature('log4jdbc') {
+        usingSourceSet(sourceSets.main)
+    }
+}
+
 dependencies {
     api enforcedPlatform(SpringBootPlugin.BOM_COORDINATES)
     api 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -27,7 +37,6 @@ dependencies {
     api "org.redisson:redisson-spring-boot-starter:$redissonVersion"
     api 'org.apache.commons:commons-pool2'
     api 'org.apache.commons:commons-lang3'
-    implementation "com.lwohvye.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:$log4jdbcVersion"
     api "org.springdoc:springdoc-openapi-starter-webmvc-ui:$springdocVersion"
     api "cn.hutool:hutool-all:$hutoolVersion"
     api "net.dreamlu:mica-ip2region:$ip2regionVersion"
@@ -47,14 +56,9 @@ dependencies {
     compileOnlyApi "org.projectlombok:lombok:${lombokVersion}"
     compileOnlyApi "org.mapstruct:mapstruct-processor:$mapstructVersion"
     runtimeOnly 'com.mysql:mysql-connector-j'
+    log4jdbcRuntimeOnly "com.lwohvye.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:$log4jdbcVersion"
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
     annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
-}
-
-description = '系统核心模块'
-
-java {
-    withJavadocJar()
 }
 
 // TODO: 2022/9/1 这个无法传递，就很不好
